Added sensors for testing

--- a/heater01.yaml
+++ b/heater01.yaml
@@ -57,3 +57,26 @@ autoterm:
   # publish_topic: default to "${core.name}/autoterm"
   # subscribe_topic: default to "${core.name}/autoterm/cmd"
   # refresh_ms: 30000
+  # optional sensors
+  heater_temperature:
+    name: "Heater Temperature"
+  panel_temperature:
+    name: "Panel Temperature"
+  external_temperature:
+    name: "External Temperature"
+  battery_voltage:
+    name: "Battery Voltage"
+  temperature_setpoint:
+    name: "Temperature Setpoint"
+  power_level:
+    name: "Power Level"
+  operating_state:
+    name: "Operating State"
+  operating_mode:
+    name: "Operating Mode"
+  ventilation:
+    name: "Ventilation"
+
+sensor:
+
+text_sensor:
