--- a/heater01.yaml
+++ b/heater01.yaml
@@ -51,14 +51,14 @@ uart:
 autoterm:
   uart_panel: panel
   uart_heater: heater
-  # refresh_ms: 30000
-  # optional mqtt settings
+  ## optional settings
   # timeout_ms: 20
   # buffer_size: 32
-  # publish_topic: default to "${core.name}/autoterm"
-  # subscribe_topic: default to "${core.name}/autoterm/cmd"
   # refresh_ms: 30000
-  # optional sensors
+  ## optional mqtt_json settings
+  # publish_topic: default to "${core.name}/autoterm/state"
+  # subscribe_topic: default to "${core.name}/autoterm/command"
+  ## optional sensors and controls
   heater_temperature:
     name: "Heater Temperature"
   panel_temperature:
