Add power_switch for testing

--- a/heater01.yaml
+++ b/heater01.yaml
@@ -79,5 +79,5 @@ autoterm:
     name: "Operating Mode"
   ventilation:
     name: "Ventilation"
-
-text_sensor:
+  power_switch:
+    name: "Heater Power Switch"
